# voice_input_linux

./: .env.example  .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt
packaging/appimage/: AppRun  build_appimage.sh
packaging/pyinstaller/: entry.py  voice-input-linux.spec
tests/: test_audio_devices.py  test_audio_resampler.py  test_clipboard_injector.py  test_config.py  test_doubao_asr.py  test_environment.py  test_error_actions.py  test_history.py  test_hotkey_config.py  test_injector_selection.py  test_installer.py  test_main.py  test_model_checks.py  test_organizer_postprocess.py  test_postprocess.py  test_qwen_asr.py  test_tray.py  test_ui_shutdown.py  test_ui_wheel.py  test_ydotool_injector.py
voice_input/: __init__.py  app.py  config.py  environment.py  error_actions.py  history.py  installer.py  main.py  model_checks.py  resource_paths.py
voice_input/asr/: __init__.py  base.py  doubao_big_asr.py  mock_asr.py  qwen_realtime_asr.py
voice_input/audio/: __init__.py  devices.py  recorder.py  resampler.py
voice_input/hotkey/: __init__.py  base.py  evdev_backend.py  pynput_backend.py
voice_input/inject/: __init__.py  base.py  clipboard_injector.py  fcitx5_injector.py  mouse_injector.py  wtype_injector.py  xdotool_injector.py  ydotool_injector.py
voice_input/postprocess/: __init__.py  organizer.py  processor.py
voice_input/resources/: __init__.py  voice-input-linux.appdata.xml  voice-input-linux.desktop
voice_input/service/: voice-input-linux.service
voice_input/ui/: __init__.py  control_panel.py  environment.py  hotkey_capture.py  overlay.py  settings.py  tray.py
