[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-input-linux"
version = "0.1.0"
description = "Linux desktop dictation service with global hotkey and ASR streaming"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
  "sounddevice>=0.4.6",
  "numpy>=1.24",
  "websockets>=12",
  "pynput>=1.7",
  "evdev>=1.6",
  "dbus-next>=0.2.3",
  "pyperclip>=1.8",
]

[project.scripts]
voice-input-linux = "voice_input.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["voice_input*"]

[tool.setuptools.package-data]
voice_input = ["resources/*"]
