[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-input-linux"
version = "0.1.0"
description = "Linux desktop dictation service with global hotkey and ASR streaming"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "openShanDianShuo contributors" },
]
dependencies = [
  "PySide6>=6.6",
  "sounddevice>=0.4.6",
  "numpy>=1.24",
  "websockets>=12",
  "pynput>=1.7",
  "evdev>=1.6",
  "dbus-next>=0.2.3",
  "pyperclip>=1.8",
]

[project.urls]
Homepage = "https://github.com/ezhonghu/openShanDianShuo"
Repository = "https://github.com/ezhonghu/openShanDianShuo"
Issues = "https://github.com/ezhonghu/openShanDianShuo/issues"

[project.scripts]
voice-input-linux = "voice_input.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["voice_input*"]

[tool.setuptools.package-data]
voice_input = ["resources/*"]
